Fixed google  fonts and alignwide image

--- a/sass/utilities/_alignments.scss
+++ b/sass/utilities/_alignments.scss
@@ -40,7 +40,6 @@
 
 @media only screen and (min-width: 1300px) {
 	.alignwide {
-		max-width: 1300px;
 		margin-left: -150px;
 		margin-right: -150px;
 	}
